src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: #808080;
  background-color: #f9f9f9;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  place-items: center;
}

div {
  border-color: #eeeeee;
  font-weight: 700;
}

h1 {
  font-size: 2em;
  line-height: 1.1;
}

button {
  padding: 0.6em 1.2em;
  font-weight: 700;
  cursor: pointer;
  font-size: var(--text-sm);
  line-height: var(--tw-leading, var(--text-sm--line-height));
}

button.circle-button {
  width: 2rem;
  height: 2rem;
  border-color: #c7c7c7;
  border-width: 4px;
  padding: 0;
  border-radius: 12px;
  font-size: 0; /* remove text space */
  line-height: 0;
}

